[package]
name = "harper-cli"
version = "0.1.0"
edition = "2021"
private = true
publish = false
repository = "https://github.com/elijah-potter/harper"

[dependencies]
anyhow = "1.0.83"
ariadne = "0.4.1"
clap = { version = "4.5.4", features = ["derive"] }
harper-core = { path = "../harper-core", version = "0.9.0" }
harper-comments = { path = "../harper-comments", version = "0.9.0" }
