[package]
name = "harper-core"
version = "0.12.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/elijah-potter/harper"

[dependencies]
blanket = "0.4.0"
hashbrown = { version = "0.15.0", features = ["serde"] }
is-macro = "0.3.6"
itertools = "0.13.0"
ordered-float = { version = "4.5.0", features = ["serde"] }
paste = "1.0.14"
pulldown-cmark = "0.12.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
smallvec = { version = "1.13.2", features = ["serde"] }
thiserror = "1.0.67"
unicode-blocks = "0.1.9"
unicode-width = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
rand = "0.8.5"

[[bench]]
name = "parse_demo"
harness = false

[features]
default = []
concurrent = []
