[package]
name = "harper-core"
version = "0.12.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/elijah-potter/harper"

[dependencies]
harper-data = { path = "../harper-data", version = "0.12.0" }
harper-parsing = { path = "../harper-parsing", version = "0.12.0" }
harper-patterns = { path = "../harper-patterns", version = "0.12.0" }
harper-spell = { path = "../harper-spell", version = "0.12.0" }
blanket = "0.4.0"
fst = "0.4.7"
hashbrown = { version = "0.15.0", features = ["serde"] }
is-macro = "0.3.6"
itertools = "0.13.0"
ordered-float = { version = "4.4.0", features = ["serde"] }
paste = "1.0.14"
pulldown-cmark = "0.12.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.132"
smallvec = { version = "1.13.2", features = ["serde"] }
thiserror = "1.0.65"
levenshtein_automata = { version = "0.2.1", features = ["fst_automaton"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["plotters", "cargo_bench_support"], default-features = false}
rand = "0.8.5"

[features]
default = []
concurrent = ["harper-data/concurrent"]
