[package]
name = "harper-dictionary-parsing"
version = "0.12.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/elijah-potter/harper"

[dependencies]
harper-data = { path = "../harper-data", version = "0.12.0" }
hashbrown = { version = "0.15.0", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.132"
smallvec = { version = "1.13.2", features = ["serde"] }
thiserror = "1.0.65"
