[package]
name = "harper-gestalt"
version = "0.12.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/elijah-potter/harper"

[dependencies]
harper-data = { path = "../harper-data", version = "0.12.0" }
harper-language-detection = { path = "../harper-language-detection", version = "0.12.0" }
harper-parsing = { path = "../harper-parsing", version = "0.12.0" }
harper-patterns = { path = "../harper-patterns", version = "0.12.0" }
harper-comments = { path = "../harper-comments", version = "0.12.0" }
harper-html = { path = "../harper-html", version = "0.12.0" }
itertools = "0.13.0"

[dev-dependencies]
paste = "1.0.15"
harper-linting = { path = "../harper-linting", version = "0.12.0" }
harper-core = { path = "../harper-core", version = "0.12.0" }
harper-spell = { path = "../harper-spell", version = "0.12.0" }

[features]
default = []
concurrent = ["harper-data/concurrent"]
