[package]
name = "harper-html"
version = "0.12.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/elijah-potter/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "0.12.0" }
harper-tree-sitter = { path = "../harper-tree-sitter", version = "0.12.0" }
tree-sitter-html = "0.19.0"
tree-sitter = "0.20.10"

[dev-dependencies]
paste = "1.0.15"
