[package]
name = "harper-language-detection"
version = "0.12.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/elijah-potter/harper"

[dependencies]
harper-data = { path = "../harper-data", version = "0.12.0" }
harper-spell = { path = "../harper-spell", version = "0.12.0" }
harper-core = { path = "../harper-core", version = "0.12.0" }
harper-parsing = { path = "../harper-parsing", version = "0.12.0" }

[features]
default = []
concurrent = ["harper-data/concurrent"]
