[package]
name = "harper-latex"
version = "0.11.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/elijah-potter/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "0.11.0" }
harper-tree-sitter = { path = "../harper-tree-sitter", version = "0.11.0" }
tree-sitter-latex = { git = "https://github.com/latex-lsp/tree-sitter-latex", rev = "a6c812704b3d3e1541b0853aa0d6d561301320e1" }
tree-sitter = "0.20.10"

[dev-dependencies]
paste = "1.0.15"
