[package]
name = "harper-ls"
version = "0.8.1"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/elijah-potter/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "0.8.0" }
tower-lsp = "0.20.0"
tokio = { version = "1.36.0", features = ["fs", "rt", "rt-multi-thread", "macros", "io-std", "io-util", "net"] }
clap = { version = "4.5.1", features = ["derive"] }
once_cell = "1.19.0"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20.3"
tree-sitter-python = "0.20.4"
tree-sitter-javascript = "0.20.1"
tree-sitter-go = "0.20.0"
tree-sitter-c = "0.20.7"
tree-sitter-cpp = "0.20.5"
tree-sitter-ruby = "0.20.1"
tree-sitter-swift = "0.4.0"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-toml = "0.20.0"
tree-sitter-lua = "0.0.19"
dirs = "5.0.1"
anyhow = "1.0.80"
serde_json = "1.0.114"
itertools = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
resolve-path = "0.1.0"
open = "5.1.1"
futures = "0.3.30"
unicode-width = "0.1.11"
