[package]
name = "harper-ls"
version = "0.12.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/elijah-potter/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "0.12.0", features = ["concurrent"] }
harper-comments = { path = "../harper-comments", version = "0.12.0" }
harper-html = { path = "../harper-html", version = "0.12.0" }
tower-lsp = "0.20.0"
tokio = { version = "1.41.0", features = ["fs", "rt", "rt-multi-thread", "macros", "io-std", "io-util", "net"] }
clap = { version = "4.5.20", features = ["derive"] }
once_cell = "1.20.2"
dirs = "5.0.1"
anyhow = "1.0.92"
serde_json = "1.0.132"
itertools = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
resolve-path = "0.1.0"
open = "5.3.0"
futures = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
