[package]
name = "harper-parsing"
version = "0.12.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/elijah-potter/harper"

[dependencies]
harper-data = { path = "../harper-data", version = "0.12.0" }
harper-patterns = { path = "../harper-patterns", version = "0.12.0" }
blanket = "0.4.0"
pulldown-cmark = "0.12.2"
itertools = "0.13.0"

[dev-dependencies]
rand = "0.8.5"

[features]
default = []
concurrent = ["harper-data/concurrent"]
