[package]
name = "harper-patterns"
version = "0.12.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/elijah-potter/harper"

[dependencies]
harper-data = { path = "../harper-data", version = "0.12.0" }
blanket = "0.4.0"
hashbrown = "0.15.1"
paste = "1.0.14"

[dev-dependencies]
harper-parsing = { path = "../harper-parsing", version = "0.12.0" }

[features]
default = []
concurrent = ["harper-data/concurrent"]
