[package]
name = "harper-serve"
version = "0.1.0"
edition = "2021"
private = true
publish = false

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.35.1", features = ["fs", "rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
harper-core = { path = "../harper-core" }
serde_json = "1.0.110"
