[package]
name = "harper-serve"
version = "0.1.0"
edition = "2021"
private = true
publish = false

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["fs", "rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
harper-core = { path = "../harper-core" }
serde_json = "1.0.110"
