[package]
name = "harper-wasm"
version = "0.1.0"
edition = "2021"
private = true
publish = false
repository = "https://github.com/elijah-potter/harper"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
tracing = "0.1.41"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.97"
harper-core = { path = "../harper-core", version = "0.12.0", features = ["concurrent"] }
once_cell = "1.20.2"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
